test/bad/classes/struct01.px

class Struct def
    n: Int

r = Struct()
print r.x
